do not set memory settings